the auth and store mangement updated
